<resources>
    <string name="app_name">Namma Mela</string>
    <string name="tonight_play">Tonight\'s Play</string>
    <string name="update_play">Update Play</string>
    <string name="star_cast">Star Cast</string>
    <string name="select_seats">Select Seats</string>
    <string name="stage">STAGE</string>
    <string name="fan_wall">Fan Wall</string>
    <string name="post">Post</string>
    <string name="add_comment">Add a comment&#8230;</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="dont_have_account">Don\'t have an account? Register</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="booking_history">Booking History</string>

    <!-- New UI Strings -->
    <string name="welcome_to">Welcome to</string>
    <string name="experience_magic">Experience Magic on Stage</string>
    <string name="join_community">Join our artistic community</string>
    <string name="book_now">Book Now</string>
    <string name="details">Details</string>
    <string name="about_play">About the Play</string>
    <string name="fans_saying">Fans are saying</string>
    <string name="choose_seats">Choose Your Seats</string>
    <string name="label_available">Available</string>
    <string name="label_selected">Selected</string>
    <string name="label_booked">Booked</string>
    <string name="screen">SCREEN</string>
    <string name="continue_text">Continue</string>
    <string name="share_thoughts">Share your thoughts&#8230;</string>
    <string name="venue">Venue</string>
    <string name="select_date_time">Select Date &amp; Time</string>
    <string name="venue_details">Venue Details</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="user_details">User Details</string>
    <string name="phone_number">Phone Number</string>
    <string name="user_avatar">User Avatar</string>
    <string name="discover_culture">Discover Art &amp; Culture</string>
    <string name="promo_discount">50% OFF</string>
    <string name="home">Home</string>
    <string name="my_bookings">My Bookings</string>
    <string name="account">Account</string>
    <string name="connect_community">Connect with the community</string>
    <string name="default_web_client_id">YOUR_WEB_CLIENT_ID_HERE</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="reset_link_sent">Password reset link sent to your email</string>
    <string name="enter_email_to_reset">Enter your email to receive a password reset link</string>
    <string name="google_sign_in">Continue with Google</string>
    <string name="please_wait">Please wait&#8230;</string>
</resources>
